Multiple colour support! You can enable after 5 attempts.

--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -39,6 +39,14 @@ a
 a.result
     cursor default
 
+a.enable-all-colors
+    position absolute
+    bottom 0
+    left 0
+    width 100%
+    font-size 1em
+    color rgba(255,255,255,0.75)
+
 .app
     display table-cell
     vertical-align middle
