Improved text shadow over different colours.

--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -33,7 +33,7 @@ a
     color rgba(255,255,255,0.9)
     font-size 3em
     text-decoration none
-    text-shadow 0 0 .075em #666
+    text-shadow 0 0 .075em rgba(0.0.0.0.5)
     cursor pointer
 
 a.result
