--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -34,6 +34,7 @@ a
     font-size 3em
     text-decoration none
     text-shadow 0 0 .075em #666
+    text-shadow 0 0 .075em rgba(0,0,0,0.5)
     cursor pointer
 
 a.result
