Forgot 2nd bg transition

--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -11,6 +11,9 @@ body
     font-family Helvetica,Arial,sans-serif
     transition background-color 0.5s
 
+.bg2
+    transition background-color 0.5s
+
 p
     margin 0
     color white
