Fixed font style. Added incorrect brand to incorrect message.

--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -31,6 +31,7 @@ p.color-choice
     color white
     color rgba(255,255,255,0.9)
     font-size 3em
+    font-style normal
     text-decoration none
     text-shadow 0 0 .075em #666
     text-shadow 0 0 .075em rgba(0,0,0,0.5)
@@ -41,6 +42,7 @@ p.result
 
 p.num
     font-size 1.5em
+    font-style italic
     margin-top 1em
 
 span
