Touchy stuff. Fonty stuff.

--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -1,3 +1,6 @@
+*
+    -webkit-tap-highlight-color rgba(0,0,0,0)
+
 html, body
     margin 0
     height 100%
@@ -8,9 +11,11 @@ body
     min-height 100%
     background-color #333
     font-size 100%
-    font-family Helvetica,Arial,sans-serif
+    font-family 'HelveticaNeue-Light','HelveticaNeue',Helvetica,Arial,sans-serif
     transition background-color 0.5s
-
+    -webkit-touch-callout none
+    -webkit-text-size-adjust none
+    -webkit-user-select none
 p
     margin 0
     color white
