--- a/src/css/nav.styl
+++ b/src/css/nav.styl
@@ -34,6 +34,11 @@
     color white
     text-decoration none
 
+.nav .credit
+    position absolute
+    font-size .75em
+    bottom .25em
+
 .nav-open
     left 0
 
